un-nested model registration w/ mlflow

--- a/demo_notebooks/1_training_pipeline.ipynb
+++ b/demo_notebooks/1_training_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,30 +107,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cpu_compute_target = \"mm-cpu-cluster\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "CommandComponent({'intellectual_property': None, 'auto_increment_version': False, 'source': 'REMOTE.WORKSPACE.COMPONENT', 'is_anonymous': False, 'auto_delete_setting': None, 'name': 'partition_data', 'description': None, 'tags': {}, 'properties': {}, 'print_as_yaml': True, 'id': '/subscriptions/9a729243-1221-42c5-824c-9e44cb2da98d/resourceGroups/many-models-rg/providers/Microsoft.MachineLearningServices/workspaces/mm-aml-wksp/components/partition_data/versions/1', 'Resource__source_path': None, 'base_path': '/home/zacksoenen/Projects/many-models-azureml/demo_notebooks', 'creation_context': <azure.ai.ml._restclient.v2022_10_01.models._models_py3.SystemData object at 0x7f032d31edc0>, 'serialize': <msrest.serialization.Serializer object at 0x7f032d331760>, 'command': 'python partition_data.py --data_source ${{inputs.data_source}} --partition_keys ${{inputs.partition_keys}} --tabular_output_data ${{outputs.tabular_output_data}}', 'code': '/subscriptions/9a729243-1221-42c5-824c-9e44cb2da98d/resourceGroups/many-models-rg/providers/Microsoft.MachineLearningServices/workspaces/mm-aml-wksp/codes/222a1914-01c0-482a-9f17-16c36d350d26/versions/1', 'environment_variables': None, 'environment': '/subscriptions/9a729243-1221-42c5-824c-9e44cb2da98d/resourceGroups/many-models-rg/providers/Microsoft.MachineLearningServices/workspaces/mm-aml-wksp/environments/CliV2AnonymousEnvironment/versions/ff5709b25edeee93f3a87055e0c8bf61', 'distribution': None, 'resources': {'instance_count': 1}, 'queue_settings': None, 'version': '1', 'latest_version': None, 'schema': 'https://azuremlschemas.azureedge.net/latest/commandComponent.schema.json', 'type': 'command', 'display_name': 'Partition input data by keys', 'is_deterministic': True, 'inputs': {'data_source': {'type': 'uri_file', 'optional': False}, 'partition_keys': {'type': 'string', 'optional': False}}, 'outputs': {'tabular_output_data': {'type': 'mltable'}}, 'yaml_str': None, 'other_parameter': {}, 'additional_includes': []})"
+       "'ml_client_registry = MLClient(credential=credential, registry_name=\"azureml\")\\nregister_model_from_registry = ml_client_registry.components.get(\\n    name=\"register_model\", label=\"latest\"\\n)'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "#Register customer data partition component\n",
-    "ml_client.components.create_or_update(partition_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Load Azure pre-build component\n",
     "'''ml_client_registry = MLClient(credential=credential, registry_name=\"azureml\")\n",
@@ -141,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,9 +207,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Class AutoDeleteSettingSchema: This is an experimental class, and may change at any time. Please see https://aka.ms/azuremlexperimental for more information.\n",
+      "Class AutoDeleteConditionSchema: This is an experimental class, and may change at any time. Please see https://aka.ms/azuremlexperimental for more information.\n",
+      "Class BaseAutoDeleteSettingSchema: This is an experimental class, and may change at any time. Please see https://aka.ms/azuremlexperimental for more information.\n",
+      "Class IntellectualPropertySchema: This is an experimental class, and may change at any time. Please see https://aka.ms/azuremlexperimental for more information.\n",
+      "Class ProtectionLevelSchema: This is an experimental class, and may change at any time. Please see https://aka.ms/azuremlexperimental for more information.\n",
+      "Class BaseIntellectualPropertySchema: This is an experimental class, and may change at any time. Please see https://aka.ms/azuremlexperimental for more information.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -246,8 +257,7 @@
       "      command: python partition_data.py --data_source ${{inputs.data_source}} --partition_keys\n",
       "        ${{inputs.partition_keys}} --tabular_output_data ${{outputs.tabular_output_data}}\n",
       "      environment: azureml:/subscriptions/9a729243-1221-42c5-824c-9e44cb2da98d/resourceGroups/many-models-rg/providers/Microsoft.MachineLearningServices/workspaces/mm-aml-wksp/environments/CliV2AnonymousEnvironment/versions/ff5709b25edeee93f3a87055e0c8bf61\n",
-      "      code: azureml:/subscriptions/9a729243-1221-42c5-824c-9e44cb2da98d/resourceGroups/many-models-rg/providers/Microsoft.MachineLearningServices/workspaces/mm-aml-wksp/codes/222a1914-01c0-482a-9f17-16c36d350d26/versions/1\n",
-      "      id: /subscriptions/9a729243-1221-42c5-824c-9e44cb2da98d/resourceGroups/many-models-rg/providers/Microsoft.MachineLearningServices/workspaces/mm-aml-wksp/components/azureml_anonymous/versions/8e4c9e12-af22-4731-a084-ef3bb03479c7\n",
+      "      code: azureml:/subscriptions/9a729243-1221-42c5-824c-9e44cb2da98d/resourceGroups/many-models-rg/providers/Microsoft.MachineLearningServices/workspaces/mm-aml-wksp/codes/f96c8d2f-b6ff-47d6-8b17-6077b830693d/versions/1\n",
       "      is_deterministic: true\n",
       "  train_many_models_with_partition_keys:\n",
       "    type: parallel\n",
@@ -306,7 +316,7 @@
       "      - Brand\n",
       "      retry_settings:\n",
       "        timeout: 60\n",
-      "        max_retries: 2\n",
+      "        max_retries: 1\n",
       "      task:\n",
       "        type: run_function\n",
       "        code: /home/zacksoenen/Projects/many-models-azureml/src\n",
@@ -356,7 +366,7 @@
       "    - Brand\n",
       "    retry_settings:\n",
       "      timeout: 60\n",
-      "      max_retries: 2\n",
+      "      max_retries: 1\n",
       "    task:\n",
       "      type: run_function\n",
       "      code: /home/zacksoenen/Projects/many-models-azureml/src\n",
@@ -447,24 +457,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Warning: the provided asset name 'mm-training-env-py37' will not be used for anonymous registration\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
       "Warning: the provided asset name 'mm-training-env-py37' will not be used for anonymous registration\n",
       "Warning: the provided asset name 'mm-training-env-py37' will not be used for anonymous registration\n",
       "Warning: the provided asset name 'mm-training-env-py37' will not be used for anonymous registration\n",
-      "\u001b[32mUploading src (0.01 MBs): 100%|██████████| 8808/8808 [00:00<00:00, 40411.37it/s]\n",
+      "Warning: the provided asset name 'mm-training-env-py37' will not be used for anonymous registration\n",
+      "\u001b[32mUploading src (0.01 MBs): 100%|██████████| 8810/8810 [00:00<00:00, 27418.27it/s]\n",
       "\u001b[39m\n",
       "\n"
      ]
@@ -474,13 +478,13 @@
     "# Submit training pipeline\n",
     "pipeline_job = ml_client.jobs.create_or_update(\n",
     "    training_pipeline,\n",
-    "    experiment_name=\"many-models-parallel-training-job-mlflow24\",\n",
+    "    experiment_name=\"many-models-parallel-training-job-mlflow25\",\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -510,47 +514,47 @@
        "      <th>artifact_uri</th>\n",
        "      <th>start_time</th>\n",
        "      <th>end_time</th>\n",
-       "      <th>metrics.training_mse</th>\n",
-       "      <th>metrics.training_score</th>\n",
+       "      <th>metrics.test_mape</th>\n",
        "      <th>metrics.training_mae</th>\n",
+       "      <th>metrics.training_mse</th>\n",
        "      <th>metrics.training_rmse</th>\n",
        "      <th>...</th>\n",
-       "      <th>params.min_samples_leaf</th>\n",
-       "      <th>params.max_leaf_nodes</th>\n",
+       "      <th>params.verbose</th>\n",
+       "      <th>params.max_features</th>\n",
        "      <th>params.min_samples_split</th>\n",
-       "      <th>tags.store</th>\n",
-       "      <th>tags.mlflow.runName</th>\n",
-       "      <th>tags.estimator_name</th>\n",
-       "      <th>tags.brand</th>\n",
-       "      <th>tags.mlflow.rootRunId</th>\n",
-       "      <th>tags.mlflow.user</th>\n",
        "      <th>tags.estimator_class</th>\n",
+       "      <th>tags.mlflow.user</th>\n",
+       "      <th>tags.brand</th>\n",
+       "      <th>tags.mlflow.runName</th>\n",
+       "      <th>tags.store</th>\n",
+       "      <th>tags.mlflow.rootRunId</th>\n",
+       "      <th>tags.estimator_name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>8e65bc4f-d3a9-4dce-9093-49c0e9fc3afd</td>\n",
-       "      <td>e7fcc503-1735-43d4-9298-1228018a7232</td>\n",
+       "      <td>8d70c2e7-f430-49dd-be4a-afdf61e68a3b</td>\n",
+       "      <td>54852c3c-0cdf-4ad1-8742-0b113225cbf6</td>\n",
        "      <td>FINISHED</td>\n",
        "      <td></td>\n",
-       "      <td>2023-12-21 22:15:01.902000+00:00</td>\n",
-       "      <td>2023-12-21 22:15:11.010000+00:00</td>\n",
-       "      <td>1.534044e+06</td>\n",
-       "      <td>0.979091</td>\n",
+       "      <td>2023-12-28 17:21:25.512000+00:00</td>\n",
+       "      <td>2023-12-28 17:21:33.688000+00:00</td>\n",
+       "      <td>21.694092</td>\n",
        "      <td>989.14651</td>\n",
+       "      <td>1.534044e+06</td>\n",
        "      <td>1238.565122</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>None</td>\n",
        "      <td>2</td>\n",
-       "      <td>1013</td>\n",
-       "      <td>train_1013_tropicana</td>\n",
-       "      <td>GradientBoostingRegressor</td>\n",
-       "      <td>tropicana</td>\n",
-       "      <td>8e65bc4f-d3a9-4dce-9093-49c0e9fc3afd</td>\n",
-       "      <td>Zack Soenen</td>\n",
        "      <td>sklearn.ensemble.gradient_boosting.GradientBoo...</td>\n",
+       "      <td>Zack Soenen</td>\n",
+       "      <td>tropicana</td>\n",
+       "      <td>train_n_reg_1013_tropicana</td>\n",
+       "      <td>1013</td>\n",
+       "      <td>8d70c2e7-f430-49dd-be4a-afdf61e68a3b</td>\n",
+       "      <td>GradientBoostingRegressor</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -559,33 +563,33 @@
       ],
       "text/plain": [
        "                                 run_id                         experiment_id  \\\n",
-       "0  8e65bc4f-d3a9-4dce-9093-49c0e9fc3afd  e7fcc503-1735-43d4-9298-1228018a7232   \n",
+       "0  8d70c2e7-f430-49dd-be4a-afdf61e68a3b  54852c3c-0cdf-4ad1-8742-0b113225cbf6   \n",
        "\n",
        "     status artifact_uri                       start_time  \\\n",
-       "0  FINISHED              2023-12-21 22:15:01.902000+00:00   \n",
+       "0  FINISHED              2023-12-28 17:21:25.512000+00:00   \n",
        "\n",
-       "                          end_time  metrics.training_mse  \\\n",
-       "0 2023-12-21 22:15:11.010000+00:00          1.534044e+06   \n",
+       "                          end_time  metrics.test_mape  metrics.training_mae  \\\n",
+       "0 2023-12-28 17:21:33.688000+00:00          21.694092             989.14651   \n",
        "\n",
-       "   metrics.training_score  metrics.training_mae  metrics.training_rmse  ...  \\\n",
-       "0                0.979091             989.14651            1238.565122  ...   \n",
+       "   metrics.training_mse  metrics.training_rmse  ...  params.verbose  \\\n",
+       "0          1.534044e+06            1238.565122  ...               0   \n",
        "\n",
-       "   params.min_samples_leaf  params.max_leaf_nodes  params.min_samples_split  \\\n",
-       "0                        1                   None                         2   \n",
+       "   params.max_features  params.min_samples_split  \\\n",
+       "0                 None                         2   \n",
        "\n",
-       "  tags.store   tags.mlflow.runName        tags.estimator_name tags.brand  \\\n",
-       "0       1013  train_1013_tropicana  GradientBoostingRegressor  tropicana   \n",
+       "                                tags.estimator_class tags.mlflow.user  \\\n",
+       "0  sklearn.ensemble.gradient_boosting.GradientBoo...      Zack Soenen   \n",
        "\n",
-       "                  tags.mlflow.rootRunId tags.mlflow.user  \\\n",
-       "0  8e65bc4f-d3a9-4dce-9093-49c0e9fc3afd      Zack Soenen   \n",
+       "  tags.brand         tags.mlflow.runName tags.store  \\\n",
+       "0  tropicana  train_n_reg_1013_tropicana       1013   \n",
        "\n",
-       "                                tags.estimator_class  \n",
-       "0  sklearn.ensemble.gradient_boosting.GradientBoo...  \n",
+       "                  tags.mlflow.rootRunId        tags.estimator_name  \n",
+       "0  8d70c2e7-f430-49dd-be4a-afdf61e68a3b  GradientBoostingRegressor  \n",
        "\n",
        "[1 rows x 42 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +600,7 @@
     "azureml_tracking_uri = ml_client.workspaces.get(ml_client.workspace_name).mlflow_tracking_uri\n",
     "mlflow.set_tracking_uri(azureml_tracking_uri)\n",
     "\n",
-    "EXPIREMENTS = [\"many-models-parallel-training-job-mlflow24\"]\n",
+    "EXPIREMENTS = [\"many-models-parallel-training-job-mlflow25\"]\n",
     "\n",
     "mlflow.search_runs(experiment_names= EXPIREMENTS,\n",
     "                   filter_string=\"tags.store = '1013' and \\\n",
@@ -607,29 +611,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BEST MODEL VERSION: 13\n"
+      "BEST MODEL VERSION: 14\n"
      ]
     }
    ],
    "source": [
     "# Get best version of the registered model\n",
-    "df = mlflow.search_runs(experiment_names= EXPIREMENTS,\n",
-    "                   filter_string=\"tags.store = '1013' and \\\n",
-    "                                  tags.brand = 'tropicana' \"\n",
-    "                )\n",
+    "\n",
+    "df = mlflow.search_runs(search_all_experiments=True,\n",
+    "                        filter_string=\"tags.store = '1013' and \\\n",
+    "                                       tags.brand = 'tropicana' and \\\n",
+    "                                       attributes.status != 'failed' \"\n",
+    "                        )\n",
     "\n",
     "best_run = df.loc[df['metrics.test_rmse'].idxmin()]['run_id']\n",
     "\n",
-    "child_job_df = mlflow.search_runs(experiment_names= EXPIREMENTS, filter_string=\"tags.mlflow.parentRunId = '8e65bc4f-d3a9-4dce-9093-49c0e9fc3afd'\")\n",
-    "best_run = child_job_df.loc[child_job_df['tags.mlflow.parentRunId']== best_run, 'run_id'].values[0]\n",
-    "\n",
+    "best_run = \"8d70c2e7-f430-49dd-be4a-afdf61e68a3b\" # Hardcded for testing / can be removed\n",
     "for model in ml_client.models.list(name=\"1013_tropicana\"):\n",
     "    if model.job_name == best_run:\n",
     "        print(f'BEST MODEL VERSION: {model.version}')"
