--- a/demo_notebooks/2_inferencing_pipeline.ipynb
+++ b/demo_notebooks/2_inferencing_pipeline.ipynb
@@ -109,7 +109,10 @@
     }
    ],
    "source": [
-    "# Load registered custom partition component (Registered in previous notebook)\n",
+    "# Register customer data partition component\n",
+    "ml_client.components.create_or_update(partition_data)\n",
+    "\n",
+    "#Load registered component\n",
     "partition_component_from_registry = ml_client.components.get(\n",
     "    name=\"partition_data\", label=\"latest\"\n",
     ")\n",
