--- a/demo_notebooks/0_setup.ipynb
+++ b/demo_notebooks/0_setup.ipynb
@@ -23,13 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import time\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from dotenv import load_dotenv, find_dotenv\n",
     "from azure.ai.ml import MLClient\n",
     "from azure.ai.ml.entities import Data\n",
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -289,6 +290,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Partitions: 99\n"
+     ]
     }
    ],
    "source": [
@@ -296,7 +304,9 @@
     "data_asset = ml_client.data.get(\"oj-sim-sales-train\", label=\"latest\")\n",
     "\n",
     "df = pd.read_csv(data_asset.path)\n",
-    "display(df.head(10))"
+    "display(df.head(10))\n",
+    "\n",
+    "print(f\"Total Partitions: {df[['Brand', 'Store']].drop_duplicates().shape[0]}\")"
    ]
   },
   {
