--- a/demo_notebooks/0_setup.ipynb
+++ b/demo_notebooks/0_setup.ipynb
@@ -11,9 +11,9 @@
     "#### - Create and populate .env file in the home directory\n",
     "- Use [.sample.env](../.sample.env) as a guide\n",
     "#### - Create and activate conda virtual env\n",
-    "- Run the following bash commands via the terminal\n",
+    "- Run the following bash commands via the terminal _from the top directory_\n",
     "```bash\n",
-    "    conda env create --name many_models --file=../environment/local_conda.yaml\n",
+    "    conda env create --name many_models --file=./environment/local_conda.yaml\n",
     "    conda activate many_models\n",
     "    az login\n",
     "```\n",
@@ -23,24 +23,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import time\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from dotenv import load_dotenv, find_dotenv\n",
     "from azure.ai.ml import MLClient\n",
-    "from azure.ai.ml.entities import Data\n",
+    "from azure.ai.ml.entities import Data, AmlCompute\n",
     "from azure.ai.ml.constants import AssetTypes\n",
     "from azure.identity import DefaultAzureCredential"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,31 +83,22 @@
    "outputs": [],
    "source": [
     "# set the version number of the data asset to the current UTC time\n",
-    "v1 = time.strftime(\"%Y.%m.%d.%H%M%S\", time.gmtime())\n",
+    "v = time.strftime(\"%Y.%m.%d.%H%M%S\", time.gmtime())\n",
     "local_path = \"../data/oj_sim_sales/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mUploading test_subset_results.csv\u001b[32m (< 1 MB): 100%|██████████| 67.9k/67.9k [00:00<00:00, 499kB/s]\n",
-      "\u001b[39m\n",
-      "\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "Data({'skip_validation': False, 'mltable_schema_url': None, 'referenced_uris': None, 'type': 'uri_file', 'is_anonymous': False, 'auto_increment_version': False, 'auto_delete_setting': None, 'name': 'oj-sim-sales-test-results', 'description': 'Results - Chicago area orange juice sales data', 'tags': {}, 'properties': {}, 'print_as_yaml': True, 'id': '/subscriptions/9a729243-1221-42c5-824c-9e44cb2da98d/resourceGroups/many-models-rg/providers/Microsoft.MachineLearningServices/workspaces/mm-aml-wksp/data/oj-sim-sales-test-results/versions/2023.12.27.045414', 'Resource__source_path': None, 'base_path': '/home/zacksoenen/Projects/many-models-azureml/demo_notebooks', 'creation_context': <azure.ai.ml.entities._system_data.SystemData object at 0x7fed4154deb0>, 'serialize': <msrest.serialization.Serializer object at 0x7fed41554940>, 'version': '2023.12.27.045414', 'latest_version': None, 'path': 'azureml://subscriptions/9a729243-1221-42c5-824c-9e44cb2da98d/resourcegroups/many-models-rg/workspaces/mm-aml-wksp/datastores/workspaceblobstore/paths/LocalUpload/022cdf720e21aee2a5d62c47634c3f3a/test_subset_results.csv', 'datastore': None})"
+       "Data({'skip_validation': False, 'mltable_schema_url': None, 'referenced_uris': None, 'type': 'uri_file', 'is_anonymous': False, 'auto_increment_version': False, 'auto_delete_setting': None, 'name': 'oj-sim-sales-test-results', 'description': 'Results - Chicago area orange juice sales data', 'tags': {}, 'properties': {}, 'print_as_yaml': True, 'id': '/subscriptions/9a729243-1221-42c5-824c-9e44cb2da98d/resourceGroups/many-models-rg/providers/Microsoft.MachineLearningServices/workspaces/mm-aml-wksp/data/oj-sim-sales-test-results/versions/2024.01.16.171116', 'Resource__source_path': None, 'base_path': '/home/zacksoenen/Projects/many-models-azureml/demo_notebooks', 'creation_context': <azure.ai.ml.entities._system_data.SystemData object at 0x7f1cf1909f50>, 'serialize': <msrest.serialization.Serializer object at 0x7f1cf1909e90>, 'version': '2024.01.16.171116', 'latest_version': None, 'path': 'azureml://subscriptions/9a729243-1221-42c5-824c-9e44cb2da98d/resourcegroups/many-models-rg/workspaces/mm-aml-wksp/datastores/workspaceblobstore/paths/LocalUpload/022cdf720e21aee2a5d62c47634c3f3a/test_subset_results.csv', 'datastore': None})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +106,7 @@
    "source": [
     "train_data = Data(\n",
     "    name=\"oj-sim-sales-train\",\n",
-    "    version=v1,\n",
+    "    version=v,\n",
     "    description=\"Training Data - Chicago area orange juice sales data\",\n",
     "    path=local_path + \"train_subset.csv\",\n",
     "    type=AssetTypes.URI_FILE,\n",
@@ -124,7 +114,7 @@
     "\n",
     "results_data = Data(\n",
     "    name=\"oj-sim-sales-test-results\",\n",
-    "    version=v1,\n",
+    "    version=v,\n",
     "    description=\"Results - Chicago area orange juice sales data\",\n",
     "    path=local_path + \"test_subset_results.csv\",\n",
     "    type=AssetTypes.URI_FILE,\n",
@@ -132,7 +122,7 @@
     "\n",
     "test_data = Data(\n",
     "    name=\"oj-sim-sales-test\",\n",
-    "    version=v1,\n",
+    "    version=v,\n",
     "    description=\"Validation Set - Chicago area orange juice sales data\",\n",
     "    path=local_path + \"test_subset.csv\",\n",
     "    type=AssetTypes.URI_FILE,\n",
@@ -147,9 +137,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zacksoenen/miniconda3/envs/many_models/lib/python3.7/site-packages/azureml/dataprep/api/_aml_auth_resolver.py:48: FutureWarning: azureml.core: AzureML support for Python 3.7 is deprecated and will be dropped in an upcoming release. At that point, existing Python 3.7 workflows that use AzureML will continue to work without modification, but Python 3.7 users will no longer get access to the latest AzureML features and bugfixes. We recommend that you upgrade to Python 3.8 or newer. To disable SDK V1 deprecation warning set the environment variable AZUREML_DEPRECATE_WARNING to 'False'\n",
+      "  from azureml.core import Workspace\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -318,9 +316,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You already have a cluster named mm-cpu-cluster, we'll reuse it as is.\n"
+     ]
+    }
+   ],
    "source": [
     "# Create Compute Target\n",
     "\n",
@@ -380,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
