added documentation, completed training testing

--- a/demo_notebooks/2_inferencing_pipeline.ipynb
+++ b/demo_notebooks/2_inferencing_pipeline.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Repeatable, Parallel Model Training and Model Tracking and Analysis  \n",
+    "  \n",
+    "In this notebook, you will use Azure Machine learning to create a repeatable, scaleable prediction framework. Key concepts in this notebook are:  \n",
+    "  \n",
+    "1. **Create and Run Inference Pipeline**\n",
+    "   - The [model inference script](../src/parallel_inference.py) is custom and interchangeable so it can be easily adapted for changing needs\n",
+    "   - The same compute cluster, and thus parallel and scaleable concepts, from [Step 1 - Model Training](./1_training_pipeline.ipynb) are used\n",
+    "   - The inference script uses MLFlow to automatically select and use the \"best\" model version from a given partitions registered models\n",
+    "     - For this notebook, the lowest test RMSE score is how \"best\" is defined\n",
+    "  \n",
+    "1. **Azure Machine Learning Endpoint / Deployment**\n",
+    "   -  You will also deploy the prediction pipeline to an Azure Machine Learning Batch Endpoint, this allows for:\n",
+    "      -  Scheduling or a programatic method to run the pipeline to generate predictions\n",
+    "      -  Deployment of multiple pipeline to the same endpoint for ease or conducting side-by-side comparison"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
