completed feedback pipeline testing

--- a/demo_notebooks/3_feedback_pipeline.ipynb
+++ b/demo_notebooks/3_feedback_pipeline.ipynb
@@ -23,11 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from azure.ai.ml import MLClient, Input, Output, load_component\n",
+    "from azure.ai.ml import MLClient, load_component\n",
     "from azure.identity import DefaultAzureCredential\n",
     "from dotenv import load_dotenv, find_dotenv\n",
     "import os\n",
@@ -155,19 +155,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zacksoenen/miniconda3/envs/mm_remote/lib/python3.7/site-packages/azureml/dataprep/api/_aml_auth_resolver.py:48: FutureWarning: azureml.core: AzureML support for Python 3.7 is deprecated and will be dropped in an upcoming release. At that point, existing Python 3.7 workflows that use AzureML will continue to work without modification, but Python 3.7 users will no longer get access to the latest AzureML features and bugfixes. We recommend that you upgrade to Python 3.8 or newer. To disable SDK V1 deprecation warning set the environment variable AZUREML_DEPRECATE_WARNING to 'False'\n",
+      "  from azureml.core import Workspace\n"
+     ]
+    }
+   ],
    "source": [
     "# output_uri = <PASTE LINK HERE>\n",
-    "# output_uri = \"azureml://subscriptions/9a729243-1221-42c5-824c-9e44cb2da98d/resourcegroups/many-models-rg/workspaces/mm-aml-wksp/datastores/workspaceblobstore/paths/azureml/bb1ce81d-175f-45d1-b30d-4e8c18bd2d05/metric_results/\"\n",
+    "# **SAMPLE FORMAT** output_uri = \"azureml://subscriptions/########-####-####-####-#######/resourcegroups/resource-group/workspaces/workspace/datastores/workspaceblobstore/paths/azureml/########-#####-####-####-############/metric_results/\"\n",
     "\n",
     "metrics_df = pd.read_csv(output_uri + \"metrics.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +227,7 @@
        "17  1992-07-02  1992-10-01  minute_maid   1001  12054.754072  31.768138"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
